--- a/Hospital System.vcxproj.filters
+++ b/Hospital System.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="Medical_Record.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Data_Base.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Person.h">
@@ -54,6 +57,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Medical_Record.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Data_Base.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
