--- a/Hospital System.vcxproj.filters
+++ b/Hospital System.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="Data_Base.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Hospital.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Person.h">
@@ -60,6 +63,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Data_Base.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Hospital.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
